# bescrap

./: .eslintcache  .gitignore  Beinscrap.py  CNAME  Procfile  app.py  asset-manifest.json  beinmatch.json  checksum.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
public/: index.html
src/: App.js  Reponsitivity.jsx  constants.js  index.css  index.js  utils.js
src/api/: apis.js
src/components/: Footer.jsx  Header.jsx  Layout.jsx  MatchContainer.jsx
src/pages/Advertiser/: advertiser.jsx  advertiser.style.js
src/pages/Dmca/: dmca.jsx  dmca.style.js
src/pages/Home/: home.jsx  home.style.js
src/pages/Match/: match.jsx  match.style.js
src/store/: data.js
static/js/: 0.8c8a5440.chunk.js  3.4664df6b.chunk.js  4.34d728de.chunk.js.map  5.03d7a828.chunk.js  6.0de1b657.chunk.js  6.0de1b657.chunk.js.map  7.ff237c84.chunk.js.map  9.e9bbcff8.chunk.js  main.1f70db26.chunk.js  runtime-main.cc3aa78b.js  runtime-main.cc3aa78b.js.map
