[tool.poetry]
name = "bescrap"
version = "0.1.0"
description = "Beinmatch project web scraping based"
authors = ["Hamza Benjelloun <hamzabenjelloun77@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
bs4 = "^0.0.1"
requests = "^2.28.1"
fake-useragent = "^0.1.11"
pandas = "^1.4.3"
firebase = "^3.0.1"
python-jwt = "^3.3.3"
gcloud = "^0.18.3"
sseclient = "^0.0.27"
pycryptodome = "^3.15.0"
requests-toolbelt = "^0.9.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
